--- a/src/app/views/index/index.phtml
+++ b/src/app/views/index/index.phtml
@@ -39,7 +39,7 @@ echo '<br><br>';
 
 echo $this->tag->linkTo(
     [
-        'displayOrders',
+        'order/displayOrders',
         'Display Orders',
         'class' => 'btn btn-info'
     ]
@@ -59,32 +59,3 @@ echo $this->tag->linkTo(
 
 echo '<br><br>';
 
-
-
-// if ($users->count() > 0) {
-    ?>
-    <!-- <table class="table table-bordered table-hover">
-        <thead class="thead-light">
-        <tr>
-            <th>#</th>
-            <th>Name</th>
-            <th>Email</th>
-        </tr>
-        </thead>
-        <tfoot>
-        <tr>
-            <td colspan="3">Users quantity: <?php //echo $users->count(); ?></td>
-        </tr>
-        </tfoot>
-        <tbody> -->
-        <?php // foreach ($users as $user) { ?>
-            <!-- <tr>
-                <td><?php // echo $user->id; ?></td>
-                <td><?php // echo $user->name; ?></td>
-                <td><?php // echo $user->email; ?></td>
-            </tr> -->
-        <?php // } ?>
-        <!-- </tbody>
-    </table> -->
-    <?php
-// }
