Redundent files  in controller removed for products.

--- a/src/app/views/index/index.phtml
+++ b/src/app/views/index/index.phtml
@@ -17,7 +17,7 @@ echo '<br><br>';
 
 echo $this->tag->linkTo(
     [
-        'displayProducts',
+        'product/displayProducts',
         'Display Products',
         'class' => 'btn btn-info'
     ]
