--- a/src/app/views/product/displayProducts.phtml
+++ b/src/app/views/product/displayProducts.phtml
@@ -1,4 +1,9 @@
+<h2>Products Display!</h2>
+<br><br>
+
 <?php
+
+
 if ($products->count() > 0) {
     ?>
     <table class="table table-bordered table-hover">
