setting part is done.

--- a/src/app/views/index/index.phtml
+++ b/src/app/views/index/index.phtml
@@ -50,7 +50,7 @@ echo '<br><br>';
 
 echo $this->tag->linkTo(
     [
-        'settings',
+        'setting',
         'Settings',
         'class' => 'btn btn-secondary'
     ]
